feat: added support for qwen3-asr to replace the deprecated qwen-audio (#603)