@@ -55,8 +55,8 @@ class QwenTestHelper {
         return Stream.of(Arguments.of(QwenModelName.QWEN_MT_FLASH));
     }
 
-    public static Stream<Arguments> audioChatModelNameProvider() {
-        return Stream.of(Arguments.of(QwenModelName.QWEN_AUDIO_TURBO));
+    public static Stream<Arguments> asrChatModelNameProvider() {
+        return Stream.of(Arguments.of(QwenModelName.QWEN3_ASR_FLASH));
     }
 
     public static Stream<Arguments> embeddingModelNameProvider() {
@@ -114,9 +114,9 @@ class QwenTestHelper {
                 .url("https://dashscope.oss-cn-beijing.aliyuncs.com/audios/welcome.mp3")
                 .build();
         AudioContent audioContent = AudioContent.from(audio);
-        TextContent textContent =
-                TextContent.from("What is this audio saying? Please note that the audio language is Chinese.");
-        return Collections.singletonList(UserMessage.from(audioContent, textContent));
+        SystemMessage systemMessage =
+                SystemMessage.from("What is this audio saying? Please note that the audio language is Chinese.");
+        return List.of(systemMessage, UserMessage.from(audioContent));
     }
 
     public static List<ChatMessage> multimodalChatMessagesWithAudioData() {
@@ -125,9 +125,9 @@ class QwenTestHelper {
                 .mimeType("audio/mp3")
                 .build();
         AudioContent audioContent = AudioContent.from(audio);
-        TextContent textContent =
-                TextContent.from("What is this audio saying? Please note that the audio language is Chinese.");
-        return Collections.singletonList(UserMessage.from(audioContent, textContent));
+        SystemMessage systemMessage =
+                SystemMessage.from("What is this audio saying? Please note that the audio language is Chinese.");
+        return List.of(systemMessage, UserMessage.from(audioContent));
     }
 
     public static String multimodalAudioData() {
@@ -157,7 +157,7 @@ class QwenTestHelper {
         return getBase64DataFromResource("/parrot.mp4");
     }
 
-    private static String getBase64DataFromResource(String path) {
+    static String getBase64DataFromResource(String path) {
         ByteArrayOutputStream buffer = new ByteArrayOutputStream();
         try (InputStream in = QwenTestHelper.class.getResourceAsStream(path)) {
             assertThat(in).isNotNull();
